# airflow_project

airflow_project/: pyproject.toml
airflow_project/config/: airflow.cfg
airflow_project/dags/: create_employees_table.sql  create_employees_temp_table.sql  process_employees.py
